Closed Bug 1303397 Opened 8 years ago Closed 8 years ago

nsScriptLoader should not reinvent nsContentUtils::CheckForBOM

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- fix-optional
firefox52 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file, 1 obsolete file)

It does right now.  It should stop.
Attachment #8792056 - Attachment is obsolete: true
Attachment #8792056 - Flags: review?(bkelly)
Comment on attachment 8792060 [details] [diff] [review]
nsScriptLoader should just use nsContentUtils::CheckForBOM instead of rolling its own copy

Review of attachment 8792060 [details] [diff] [review]:
-----------------------------------------------------------------

Looks like the nsScriptLoader version (bug 152814) pre-dates the nsContentUtils version (bug 387522).  Seems reasonable to de-dupe them.
Attachment #8792060 - Flags: review?(bkelly) → review+
Pushed by bzbarsky@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2daffd62a19b
nsScriptLoader should just use nsContentUtils::CheckForBOM instead of rolling its own copy.  r=bkelly
https://hg.mozilla.org/mozilla-central/rev/2daffd62a19b
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Mark 51 as fix-optional. If it's worth uplift to 51, feel free to nominate it.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: