Bug 1303397.  nsScriptLoader should just use nsContentUtils::CheckForBOM instead of rolling its own copy.  r=bkelly